--- a/Dataset.ipynb
+++ b/Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64632660",
+   "id": "4664d2e4",
    "metadata": {},
    "source": [
     "# Gunpla Datasets\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "277f49a6",
+   "id": "941e0f5a",
    "metadata": {},
    "source": [
     "## Setup the request timeout and retries"
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "198cf6e5",
+   "id": "0bb4f0da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60e45610",
+   "id": "433ff32a",
    "metadata": {},
    "source": [
     "# Fetching the training/test dataset from dalong.net"
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a0c91236",
+   "id": "8df8387f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ea6f6d2",
+   "id": "6adc71ab",
    "metadata": {},
    "source": [
     "## Getting the review page details\n",
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "263276d3",
+   "id": "108f25a0",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "013cb41e",
+   "id": "a4ee862c",
    "metadata": {},
    "source": [
     "## Downloading few samples"
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "63db3943",
+   "id": "b5cbe24c",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cd8e812",
+   "id": "c11f1b30",
    "metadata": {},
    "source": [
     "## Download the full dataset\n",
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6b689531",
+   "id": "e6d1db08",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba531f73",
+   "id": "4235151c",
    "metadata": {},
    "source": [
     "### Note\n",
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ba05e4e",
+   "id": "fc45b63a",
    "metadata": {},
    "source": [
     "# Fetching the validation dataset from 78dm.net"
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d93396be",
+   "id": "f89a95fc",
    "metadata": {},
    "source": [
     "## Data Utils for visulization and transformation"
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f0e1cf07",
+   "id": "9b718627",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b58b868",
+   "id": "f7d955a6",
    "metadata": {},
    "source": [
     "## Getting the detail page from 78dm"
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b5559f57",
+   "id": "9270673f",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae7cdc36",
+   "id": "ea3de63a",
    "metadata": {},
    "source": [
     "## Download the full dataset"
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d751982",
+   "id": "5b32fe0f",
    "metadata": {},
    "source": [
     "download_78dm_dataset(verbose=False)"
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "507c1e90",
+   "id": "643d4234",
    "metadata": {},
    "source": [
     "### Notes\n",
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5669360",
+   "id": "fd3b623b",
    "metadata": {},
    "source": [
     "# Data Visulization\n",
@@ -650,8 +650,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "e136653f",
+   "execution_count": 23,
+   "id": "2272c17c",
    "metadata": {},
    "outputs": [
     {
@@ -892,6 +892,44 @@
     "    labels = [get_image_class(x) for x in img_paths]\n",
     "    plot_images(img_paths, labels)\n",
     "    \n",
+    "def plot_patched_image (image: Union[pathlib.Path, str, Image.Image, torch.Tensor], patch_size: int=16):\n",
+    "    \n",
+    "    img = _get_image_data(image)\n",
+    "    assert img.shape[0] == img.shape[1], \"Image must be square\"\n",
+    "    img_size = img.shape[1]\n",
+    "    \n",
+    "    assert img_size % patch_size == 0, \"Image size must be divisible by patch size\" \n",
+    "    num_patches = img_size/patch_size\n",
+    "    print(f\"Image size: {img.shape[0]} x {img.shape[1]}\\\n",
+    "        \\nNumber of patches per row: {num_patches}\\\n",
+    "        \\nNumber of patches per column: {num_patches}\\\n",
+    "        \\nTotal patches: {num_patches*num_patches}\\\n",
+    "        \\nPatch size: {patch_size} pixels x {patch_size} pixels\")\n",
+    "    \n",
+    "    fig, axs = plt.subplots(nrows=img_size//patch_size, # need int\n",
+    "            ncols=img_size//patch_size,\n",
+    "            figsize=(num_patches, num_patches),\n",
+    "            sharex=True,\n",
+    "            sharey=True,\n",
+    "    )\n",
+    "    \n",
+    "    for i, h in enumerate(range(0, img_size, patch_size)):\n",
+    "        for j, w in enumerate(range(0, img_size, patch_size)):\n",
+    "            ax = axs[i, j]\n",
+    "            ax.imshow(img[h:h+patch_size, w:w+patch_size, :])\n",
+    "            \n",
+    "            ax.set_ylabel(i+1, \n",
+    "                        rotation=\"horizontal\", \n",
+    "                        horizontalalignment=\"right\",\n",
+    "                        verticalalignment=\"center\")\n",
+    "            ax.set_xlabel(j+1)\n",
+    "            ax.set_xticks([])\n",
+    "            ax.set_yticks([])\n",
+    "            ax.label_outer()\n",
+    "            \n",
+    "    fig.suptitle(\"Image Patchified\", fontsize=16)\n",
+    "    plt.show()\n",
+    "    \n",
     "def show_image_statistics(image_dir, pattern=\"*.jpg\"):\n",
     "    \"\"\"\n",
     "    Show statistics of all matched images under image_dir\n",
@@ -956,7 +994,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f84df56",
+   "id": "53b878b0",
    "metadata": {},
    "source": [
     "The library can plot images in various format\n",
@@ -968,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b3281f4b",
+   "id": "0e6964b7",
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1090,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46cb5941",
+   "id": "d34971bc",
    "metadata": {},
    "source": [
     "## Select and plot random images"
@@ -1061,7 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a15a6b9e",
+   "id": "031872bf",
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a6c1b67a",
+   "id": "d9102836",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d6a58b8b",
+   "id": "0d2bbffb",
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a38912d",
+   "id": "324e5951",
    "metadata": {},
    "source": [
     "## Data distribution"
@@ -1156,7 +1194,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "626d6610",
+   "id": "c0520a1d",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a6c6395",
+   "id": "6a239a13",
    "metadata": {},
    "source": [
     "From the result above, we can find that the image vary in size, which make it difficult for training, as most model take a square input (image's width equals to height).\n",
@@ -1238,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c3473fb9",
+   "id": "41e11e5e",
    "metadata": {},
    "outputs": [
     {
@@ -1263,7 +1301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28a02759",
+   "id": "5923b942",
    "metadata": {},
    "source": [
     "# Creating the Pytorch datasets and dataloaders"
@@ -1272,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e18d513a",
+   "id": "f172e1fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1426,7 +1464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "507733c2",
+   "id": "331b5701",
    "metadata": {},
    "source": [
     "## Creating DataLoaders"
@@ -1435,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0da6f978",
+   "id": "b53164fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1447,7 +1485,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1178ca2e",
+   "id": "f83aa58a",
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32831c28",
+   "id": "b6add2d4",
    "metadata": {},
    "source": [
     "## Explore the dataloader"
@@ -1477,7 +1515,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "244ef1ff",
+   "id": "112faa06",
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa5b58de",
+   "id": "22b1820c",
    "metadata": {},
    "source": [
     "## Data Transform"
@@ -1513,7 +1551,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "65a255f9",
+   "id": "772b1322",
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1615,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1a022bd",
+   "id": "c4647e32",
    "metadata": {},
    "source": [
     "Now let's convert them to tensor and add Normalization as required by many models"
@@ -1586,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a8cb0e01",
+   "id": "f68b329b",
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1705,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "1f875ce9",
+   "id": "635b0c7d",
    "metadata": {},
    "outputs": [
     {
