--- a/Training.ipynb
+++ b/Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ae3e3fe4",
+   "id": "a977de88",
    "metadata": {},
    "source": [
     "# The training engine"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2b84dd91",
+   "id": "4f9a825f",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0984b92f",
+   "id": "be74fac4",
    "metadata": {},
    "source": [
     "# Utils"
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4fd3d174",
+   "id": "88cfc66e",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7292169",
+   "id": "2e5af0a2",
    "metadata": {},
    "source": [
     "# Making custom model"
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "78cdbd14",
+   "id": "90b2d114",
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc28fb92",
+   "id": "4edd745b",
    "metadata": {},
    "source": [
     "# Inference"
@@ -502,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4865499d",
+   "id": "d992a0fd",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd910f36",
+   "id": "a0b3977a",
    "metadata": {},
    "source": [
     "# Predict with untrained model"
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a384e13b",
+   "id": "e990aebf",
    "metadata": {},
    "source": [
     "## Create data loader"
@@ -600,10 +600,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "e7e09850",
+   "execution_count": 2,
+   "id": "0280f8ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import dataset\n",
     "from torchvision import transforms\n",
@@ -634,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "320596c3",
+   "id": "753e954f",
    "metadata": {},
    "source": [
     "## Create model"
@@ -643,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e302c6af",
+   "id": "4d4a05e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a50feeed",
+   "id": "33cfcce2",
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "41b5d508",
+   "id": "ffdbdcdf",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e959ebba",
+   "id": "8fad6f34",
    "metadata": {},
    "source": [
     "## Making predictions"
@@ -773,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cff78751",
+   "id": "841e1085",
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "85376815",
+   "id": "8f5f96fb",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d093e384",
+   "id": "5139349d",
    "metadata": {},
    "source": [
     "# Training the model"
@@ -912,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ecc01100",
+   "id": "fc1b507d",
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11a1454f",
+   "id": "35446a46",
    "metadata": {},
    "source": [
     "## Evaluating the performance"
@@ -1282,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f8069d82",
+   "id": "67ebbf77",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb61779b",
+   "id": "f9310640",
    "metadata": {},
    "source": [
     "## Predict with trained model"
@@ -1315,7 +1324,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0fd9475e",
+   "id": "d2c84ff1",
    "metadata": {},
    "outputs": [
     {
