--- a/Deployment.ipynb
+++ b/Deployment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "475e64d4",
+   "id": "1cc42d48",
    "metadata": {},
    "source": [
     "# Create Dataloader"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "be513119",
+   "id": "179e4a46",
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f5954cca",
+   "id": "6822791d",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "602af147",
+   "id": "d04717f5",
    "metadata": {},
    "source": [
     "# Create ViT model\n"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "21b2fc13",
+   "id": "3d8f84bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4ef0bf90",
+   "id": "8e0a0092",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7811d99",
+   "id": "92604f9c",
    "metadata": {},
    "source": [
     "# predict"
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ab2741a3",
+   "id": "b3d30493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bde14d28",
+   "id": "33175233",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e83a765",
+   "id": "daf98355",
    "metadata": {},
    "source": [
     "# Gradio"
@@ -217,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "eb809fee",
+   "id": "cc9d2b21",
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e72c0023",
+   "id": "e83f30c4",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "82f598f2",
+   "id": "c5866473",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b807136c",
+   "id": "a36981c1",
    "metadata": {},
    "source": [
     "# Model.py"
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cac3d4c2",
+   "id": "8e4e39ad",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8076ba0",
+   "id": "e98a54e8",
    "metadata": {},
    "source": [
     "# App.py"
@@ -382,7 +382,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a2a1dd31",
+   "id": "24bf9d41",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "7d2ed09d",
+   "id": "b1747eaf",
    "metadata": {},
    "outputs": [
     {
@@ -526,6 +526,102 @@
      "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:    Exception in ASGI application\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/uvicorn/protocols/http/h11_impl.py\", line 407, in run_asgi\n",
+      "    result = await app(  # type: ignore[func-returns-value]\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/uvicorn/middleware/proxy_headers.py\", line 78, in __call__\n",
+      "    return await self.app(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/applications.py\", line 270, in __call__\n",
+      "    await super().__call__(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/applications.py\", line 124, in __call__\n",
+      "    await self.middleware_stack(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/errors.py\", line 184, in __call__\n",
+      "    raise exc\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/errors.py\", line 162, in __call__\n",
+      "    await self.app(scope, receive, _send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/cors.py\", line 84, in __call__\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/exceptions.py\", line 79, in __call__\n",
+      "    raise exc\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/exceptions.py\", line 68, in __call__\n",
+      "    await self.app(scope, receive, sender)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/middleware/asyncexitstack.py\", line 21, in __call__\n",
+      "    raise e\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/middleware/asyncexitstack.py\", line 18, in __call__\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/routing.py\", line 706, in __call__\n",
+      "    await route.handle(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/routing.py\", line 276, in handle\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/routing.py\", line 66, in app\n",
+      "    response = await func(request)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/routing.py\", line 235, in app\n",
+      "    raw_response = await run_endpoint_function(\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/routing.py\", line 163, in run_endpoint_function\n",
+      "    return await run_in_threadpool(dependant.call, **values)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/concurrency.py\", line 41, in run_in_threadpool\n",
+      "    return await anyio.to_thread.run_sync(func, *args)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/anyio/to_thread.py\", line 31, in run_sync\n",
+      "    return await get_asynclib().run_sync_in_worker_thread(\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/anyio/_backends/_asyncio.py\", line 937, in run_sync_in_worker_thread\n",
+      "    return await future\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/anyio/_backends/_asyncio.py\", line 867, in run\n",
+      "    result = context.run(func, *args)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/gradio/routes.py\", line 241, in file\n",
+      "    raise ValueError(\n",
+      "ValueError: File cannot be fetched: /tmp/tmp7lcoioyi/00001-3046512880-face of a beautiful magic beast, [[[[[[[[coloring_page style]]]]]]]], black and white, vector art, line art, smooth lines, sharpb83d32x2.png, perhaps because it is not in any of set()\n",
+      "ERROR:    Exception in ASGI application\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/uvicorn/protocols/http/h11_impl.py\", line 407, in run_asgi\n",
+      "    result = await app(  # type: ignore[func-returns-value]\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/uvicorn/middleware/proxy_headers.py\", line 78, in __call__\n",
+      "    return await self.app(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/applications.py\", line 270, in __call__\n",
+      "    await super().__call__(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/applications.py\", line 124, in __call__\n",
+      "    await self.middleware_stack(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/errors.py\", line 184, in __call__\n",
+      "    raise exc\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/errors.py\", line 162, in __call__\n",
+      "    await self.app(scope, receive, _send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/cors.py\", line 84, in __call__\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/exceptions.py\", line 79, in __call__\n",
+      "    raise exc\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/middleware/exceptions.py\", line 68, in __call__\n",
+      "    await self.app(scope, receive, sender)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/middleware/asyncexitstack.py\", line 21, in __call__\n",
+      "    raise e\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/middleware/asyncexitstack.py\", line 18, in __call__\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/routing.py\", line 706, in __call__\n",
+      "    await route.handle(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/routing.py\", line 276, in handle\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/routing.py\", line 66, in app\n",
+      "    response = await func(request)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/routing.py\", line 235, in app\n",
+      "    raw_response = await run_endpoint_function(\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/fastapi/routing.py\", line 163, in run_endpoint_function\n",
+      "    return await run_in_threadpool(dependant.call, **values)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/starlette/concurrency.py\", line 41, in run_in_threadpool\n",
+      "    return await anyio.to_thread.run_sync(func, *args)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/anyio/to_thread.py\", line 31, in run_sync\n",
+      "    return await get_asynclib().run_sync_in_worker_thread(\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/anyio/_backends/_asyncio.py\", line 937, in run_sync_in_worker_thread\n",
+      "    return await future\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/anyio/_backends/_asyncio.py\", line 867, in run\n",
+      "    result = context.run(func, *args)\n",
+      "  File \"/opt/conda/lib/python3.8/site-packages/gradio/routes.py\", line 241, in file\n",
+      "    raise ValueError(\n",
+      "ValueError: File cannot be fetched: /tmp/tmp7lcoioyi/00001-3046512880-face of a beautiful magic beast, [[[[[[[[coloring_page style]]]]]]]], black and white, vector art, line art, smooth lines, sharpb83d32x2.png, perhaps because it is not in any of set()\n"
+     ]
     }
    ],
    "source": [
@@ -538,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c012cead",
+   "id": "161797e3",
    "metadata": {},
    "source": [
     "# requirements.txt"
@@ -547,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "358d7d99",
+   "id": "1124730b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0931c766",
+   "id": "d7b55581",
    "metadata": {},
    "outputs": [],
    "source": []
